# patchWork

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/: clientSide.cpp  serverSide.cpp
src/client/: CMakeLists.txt  cli.cpp  cli.h  client.cpp  client.h  main.cpp
src/patchwork/: CMakeLists.txt  Circle.cpp  Circle.h  Image.cpp  Image.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  common.cpp  common.h  figure.cpp  figure.hpp  patchwork.cpp  patchwork.h  point.cpp  point.hpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
